--- a/web/appraisal/templates/appraisal/address_list.html
+++ b/web/appraisal/templates/appraisal/address_list.html
@@ -5,7 +5,7 @@
     </label>
   </div>
   <div class="col-8 text-right">
-    <a href="#" class="btn_add_address_modal" style="font-size:0.9em;">
+    <a id="btn_add_address_modal" href="#" style="font-size:0.9em;">
       Agregar dirección
       <div class="ld ld-ring ld-spin" style="display:none;"></div>
     </a>
@@ -20,7 +20,7 @@
     </select>
   </div>
   <div class="col-2" style="padding-left:0.2em;">
-    <button type="button" class="btn btn-block btn-sm btn-outline-dark btn_edit_address_modal" value="{{real_estate.id}}" style="font-family:Material Icons;font-size:1.2em;margin-bottom:1px;">
+    <button id="btn_edit_address_modal" type="button" class="btn btn-block btn-sm btn-outline-dark" value="{{real_estate.id}}" style="font-family:Material Icons;font-size:1.2em;margin-bottom:1px;">
       <div class="icon">edit</div>
       <div class="ld ld-ring ld-spin" style="display:none;"></div>
     </button>
