--- a/web/appraisal/templates/appraisal/property_list.html
+++ b/web/appraisal/templates/appraisal/property_list.html
@@ -13,7 +13,7 @@
 	  	</div>
 	</div>
 
-	{% if buildings|length == 0 %}
+	{% if buildings|length == 0 and terrains|length == 0 %}
 
 	<div class="alert alert-warning">
 		No hay propiedades registradas en esta dirección.
@@ -22,6 +22,25 @@
 	{% else %}
 
 	<div class="list-group">
+
+		{% for terrain in terrains %}
+	  	<div class="list-group-item flex-column align-items-start building_list_item" data-terrain_id="{{terrain.id}}">
+			<div class="row">
+				<div class="col-7 text-left" style="padding-left:0.4em;padding-right:0.0em;">
+					<button type="button" class="btn btn-sm btn-outline-secondary btn_edit_property_modal" style="font-family:Material Icons;font-size:0.8em;margin-bottom:1px;padding-top:0em;padding-bottom:0em;padding-left:0.2em;padding-right:0.2em;" data-terrain_id="{{terrain.id}}" >
+	          			<div class="icon">edit</div>
+	          			<div class="ld ld-ring ld-spin" style="display:none;"></div>
+	    		    </button>
+					<a href="#" class="text-left btn_property" data-terrain_id="{{terrain.id}}" style="vertical-align:bottom;">
+						Terreno {{terrain.addressNumber2}}
+					</a>
+				</div>
+				<div class="col-5 text-left" style="padding-left:0.4em;">
+	      		</div>
+      		</div>
+      	</div>
+      	{% endfor %}
+
 		{% for building in buildings %}
 	  	<div class="list-group-item flex-column align-items-start building_list_item" data-building_id="{{building.id}}">
 		<!--<li class="building_list_item" data-building_id="{{building.id}}">-->
@@ -43,7 +62,6 @@
 					</a>
 				</div>
 				<div class="col-5 text-left" style="padding-left:0.4em;">
-	        		
 	      		</div>
       		</div>
 	 		{% if building.is_apartmentbuilding %}
