--- a/web/appraisal/templates/appraisal/realestate_appraisal.html
+++ b/web/appraisal/templates/appraisal/realestate_appraisal.html
@@ -148,7 +148,7 @@
   // store the currently selected tab in the hash value
   $("ul.nav-tabs > li > a").on("shown.bs.tab", function(e) {
     var id = $(e.target).attr("href").substr(1);
-    window.location.hash = id;
+    //window.location.hash = id;
   });
 
   // on load of the page: switch to the currently selected tab
