--- a/web/main/templates/main/appraisals_not_accepted.html
+++ b/web/main/templates/main/appraisals_not_accepted.html
@@ -27,11 +27,11 @@
       <small>{{ appraisal.solicitanteCodigo }}</small>
     </td>
     <td style="text-align:center;" data-toggle="tooltip" data-placement="top" title="{{appraisal.realEstate.get_propertyType_display}}">
-      <i class="{{ appraisal.realEstate.get_propertyTypeIcon }}"></i>
+      <i class="{{ appraisal.real_estates.first.get_propertyTypeIcon }}"></i>
     </td>
     <td>
       <a href="{{appraisal.url}}" class="address">
-        {{ appraisal.realEstate.addressVerboseNoRegion }}
+        {{ appraisal.real_estates.first.addressVerboseNoRegion }}
       </a>
     </td>
     <td>
